--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -34,60 +34,17 @@ html, body {
     opacity: 1;
     transform: rotateX(0deg); } }
 
-.playerWrapper {
-  width: 90vw;
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  color: #fff;
-  text-align: center;
-  transform: translateX(-50%); }
-
-.playerButtons {
-  display: block; }
-  .playerButtons > button {
-    border: none;
-    background: none;
-    outline: none;
-    margin: 0 5px;
-    padding: 0;
-    cursor: pointer; }
-    .playerButtons > button > img {
-      width: 20px;
-      height: 20px; }
-
-.playerInfo {
-  font-size: 0.8rem; }
-  .playerInfo > a {
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #000; }
-    .playerInfo > a:first-child {
-      font-weight: 700; }
-    .playerInfo > a > img {
-      display: inline-block;
-      vertical-align: middle;
-      margin-bottom: 4px;
-      width: 25px;
-      height: 25px; }
-  @media screen and (min-width: 769px) {
-    .playerInfo {
-      font-size: 1rem; } }
-  @media screen and (min-width: 1024px) {
-    .playerInfo {
-      font-size: 1.2rem; } }
-
 .homeWrapper {
   width: 100vw;
   height: 100vh;
-  padding: 0px 10px 20px 10px;
+  padding: 10px 10px 0px 10px;
   background-image: url("../assets/background.svg"), linear-gradient(124deg, #A13939, #E75151, #FCC88A, #C2C57F);
   background-size: 200px, 800%;
   animation: rainbow 9s ease infinite;
   display: flex;
   align-items: center;
   justify-content: center; }
-  @media screen and (min-width: 769px) {
+  @media screen and (min-width: 768px) {
     .homeWrapper {
       padding: 20px 20px; } }
   @media screen and (min-width: 1024px) {
@@ -112,7 +69,14 @@ html, body {
     border-radius: 50%;
     height: 120px;
     width: 120px; }
-  @media screen and (min-width: 769px) {
+  @media screen and (min-width: 400px) {
+    .profilePicture {
+      margin-top: -65px;
+      margin-left: -65px; }
+      .profilePicture > img {
+        height: 130px;
+        width: 130px; } }
+  @media screen and (min-width: 768px) {
     .profilePicture {
       margin-top: -70px;
       margin-left: -70px; }
@@ -138,7 +102,7 @@ html, body {
   max-width: 100%;
   font-size: 0.9rem;
   border-radius: 4px;
-  padding: 75px 30px 15px 30px;
+  padding: 65px 30px 15px 30px;
   background: #ffffff;
   box-shadow: 8px 8px rgba(0, 0, 0, 0.25);
   animation: flipInX 0.4s 1s;
@@ -146,13 +110,16 @@ html, body {
   .card > p {
     margin: 0;
     line-height: 1.6;
-    margin-bottom: 15px; }
+    margin-bottom: 10px; }
     .card > p > span {
       font-weight: 700; }
-  @media screen and (min-width: 769px) {
+  @media screen and (min-width: 400px) {
+    .card {
+      font-size: 1rem; } }
+  @media screen and (min-width: 768px) {
     .card {
       font-size: 1.5rem;
-      max-width: 800px;
+      max-width: 700px;
       padding: 90px 40px 50px 40px; }
       .card p {
         margin-bottom: 30px; } }
@@ -185,7 +152,56 @@ html, body {
   .socialIcons > a > img {
     height: 100%;
     width: 100%; }
-  @media screen and (min-width: 769px) {
+  @media screen and (min-width: 768px) {
     .socialIcons {
       height: 40px;
       width: 40px; } }
+
+.playerWrapper {
+  width: 90vw;
+  margin-bottom: 10px;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  color: #fff;
+  text-align: center;
+  transform: translateX(-50%); }
+
+.playerButtons {
+  display: block; }
+  .playerButtons > button {
+    border: none;
+    background: none;
+    outline: none;
+    margin: 0 5px;
+    padding: 0;
+    cursor: pointer; }
+    .playerButtons > button > img {
+      width: 20px;
+      height: 20px; }
+  @media screen and (min-width: 768px) {
+    .playerButtons > button > img {
+      width: 30px;
+      height: 30px; } }
+
+.playerInfo {
+  display: none;
+  font-size: 0.8rem; }
+  .playerInfo > a {
+    text-decoration: none;
+    text-transform: capitalize;
+    color: #000; }
+    .playerInfo > a:first-child {
+      font-weight: 700; }
+    .playerInfo > a > img {
+      display: inline-block;
+      vertical-align: middle;
+      margin-bottom: 4px;
+      width: 25px;
+      height: 25px; }
+  @media screen and (min-width: 400px) {
+    .playerInfo {
+      display: block; } }
+  @media screen and (min-width: 768px) {
+    .playerInfo {
+      font-size: 1.5rem; } }
