--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -183,12 +183,12 @@ $bp-desktop: "screen and (min-width: 1024px)";
 }
 
 .playerButtons {
-	display: block;
+  display: block;
 	> button {
 		border: none;
 		background: none;
 		outline: none;
-		margin: 0 5px;
+		margin: 5px 5px 0px 5px;
 		padding: 0;
 		cursor: pointer;
 
