--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,11 +37,12 @@ html, body {
 .homeWrapper {
   width: 100vw;
   height: 100vh;
-  padding: 10px 10px 0px 10px;
+  padding: 0px 10px;
   background-image: url("../assets/background.svg"), linear-gradient(124deg, #A13939, #E75151, #FCC88A, #C2C57F);
   background-size: 200px, 800%;
   animation: rainbow 9s ease infinite;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center; }
   @media screen and (min-width: 768px) {
@@ -78,18 +79,18 @@ html, body {
         width: 130px; } }
   @media screen and (min-width: 768px) {
     .profilePicture {
-      margin-top: -70px;
-      margin-left: -70px; }
-      .profilePicture > img {
-        height: 140px;
-        width: 140px; } }
-  @media screen and (min-width: 1024px) {
-    .profilePicture {
       margin-top: -75px;
       margin-left: -75px; }
       .profilePicture > img {
         height: 150px;
         width: 150px; } }
+  @media screen and (min-width: 1024px) {
+    .profilePicture {
+      margin-top: -80px;
+      margin-left: -80px; }
+      .profilePicture > img {
+        height: 160px;
+        width: 160px; } }
 
 .cardWrapper {
   position: relative;
@@ -126,10 +127,8 @@ html, body {
   @media screen and (min-width: 1024px) {
     .card {
       font-size: 1.7rem;
-      padding: 90px 80px 60px 80px;
-      max-width: 1000px; }
-      .card p {
-        margin-bottom: 40px; } }
+      padding: 90px 80px 50px 80px;
+      max-width: 1000px; } }
 
 .socialWrapper {
   display: flex;
@@ -159,13 +158,15 @@ html, body {
 
 .playerWrapper {
   width: 90vw;
-  margin-bottom: 10px;
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   left: 50%;
   color: #fff;
   text-align: center;
   transform: translateX(-50%); }
+  @media (display-mode: standalone) {
+    .playerWrapper {
+      display: none; } }
 
 .playerButtons {
   display: block; }
@@ -181,8 +182,8 @@ html, body {
       height: 20px; }
   @media screen and (min-width: 768px) {
     .playerButtons > button > img {
-      width: 30px;
-      height: 30px; } }
+      width: 25px;
+      height: 25px; } }
 
 .playerInfo {
   display: none;
