--- a/src/styles/keyframes.css
+++ b/src/styles/keyframes.css
@@ -1,19 +1,29 @@
 @keyframes rotate {
   0% {
     filter: opacity(0%);
-    transform: scale(0.3) rotate(-30deg); }
+    transform: scale(0) rotate(-30deg); }
   50% {
-    filter: opacity(80%);
+    filter: opacity(60%);
     transform: scale(1.4) rotate(30deg); }
   100% {
     filter: opacity(100%);
     transform: scale(1) rotate(360deg); } }
 
-@keyframes rainbow {
-  0%, 100% {
-    background-position: 0px 0px, 0% 0%; }
-  50% {
-    background-position: 0px 0px, 100% 100%; } }
+@keyframes shake {
+  0% {
+    transform: scale(1) skew(1deg) translate(-0.9px, 0); }
+  15% {
+    transform: scale(1) skew(-1deg) translate(0, 0.9px); }
+  30% {
+    transform: scale(1) skew(0deg) translate(-0.9px, 0.9px); }
+  45% {
+    transform: scale(1) skew(1deg) translate(0.9px, 0); }
+  60% {
+    transform: scale(1) skew(-1deg) translate(-0.9px, -0.9px); }
+  75% {
+    transform: scale(1) skew(0deg) translate(0px, -0.9px); }
+  90% {
+    transform: scale(1) skew(1deg) translate(-0.9px, -0.9px); } }
 
 @keyframes flipInX {
   0% {
