--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,7 +10,7 @@ html, body {
 
 #root {
   display: grid;
-  grid-template-rows: 80vh auto; }
+  grid-template-rows: 90vh auto; }
 
 @keyframes rotate {
   0% {
@@ -51,9 +51,9 @@ html, body {
   display: grid;
   grid-template-columns: minmax(10px, 1fr) minmax(300px, 800px) minmax(10px, 1fr);
   grid-template-areas: ".   card    .";
-  background-color: #283e56;
-  background-image: url("../assets/bg_01.svg");
-  background-size: 200px;
+  background-color: #21D4FD;
+  background-image: url("../assets/bg_01.svg"), linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+  background-size: 200px, cover;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.4);
   z-index: 50; }
 
@@ -198,55 +198,115 @@ html, body {
   .other:visited > span {
     color: red; }
 
-.playerWrapper {
-  display: none;
-  width: 90vw;
-  height: 10vh;
+.player--wrapper {
+  width: 100vw;
+  height: 3rem;
   position: fixed;
-  bottom: 0px;
-  left: 50%;
+  bottom: 0;
+  left: 0;
   color: #fff;
   text-align: center;
-  transform: translateX(-50%); }
+  background-color: #FDFDFD;
+  display: grid;
+  grid-template-columns: minmax(0px, 1fr) minmax(200px, 1000px) minmax(0px, 1fr); }
   @media (display-mode: standalone) {
-    .playerWrapper {
+    .player--wrapper {
       display: none; } }
 
-.playerButtons {
-  display: block; }
-  .playerButtons > button {
+.player--inner_wrapper {
+  height: 48px;
+  grid-column: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+
+.player--song {
+  width: 400px;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #2b2b2b; }
+  .player--song .player--artwork {
+    width: 48px;
+    height: 48px; }
+  .player--song > .player--main {
+    flex: 1;
+    margin-left: 8px;
+    overflow: hidden; }
+    .player--song > .player--main .player--music {
+      color: #fff; }
+    .player--song > .player--main .player--artist {
+      color: #fff; }
+    .player--song > .player--main .player--music, .player--song > .player--main .player--artist {
+      display: block;
+      text-decoration: none;
+      text-align: left;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      font-size: .8rem; }
+
+.player--buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .player--buttons > button {
+    width: 48px;
+    height: 48px;
     border: none;
     background: none;
     outline: none;
-    margin: 5px 5px 0px 5px;
-    padding: 0;
+    padding: 15px;
     cursor: pointer; }
-    .playerButtons > button > img {
-      width: 20px;
-      height: 20px; }
-  @media screen and (min-width: 768px) {
-    .playerButtons > button > img {
-      width: 25px;
-      height: 25px; } }
+    .player--buttons > button:hover {
+      background-color: #888; }
+    .player--buttons > button > img {
+      width: 100%;
+      height: 100%; }
 
-.playerInfo {
+.player--slider {
   display: none;
-  font-size: 0.8rem; }
-  .playerInfo > a {
-    text-decoration: none;
-    text-transform: capitalize;
-    color: #000; }
-    .playerInfo > a:first-child {
-      font-weight: 700; }
-    .playerInfo > a > img {
-      display: inline-block;
-      vertical-align: middle;
-      margin-bottom: 4px;
-      width: 25px;
-      height: 25px; }
-  @media screen and (min-width: 400px) {
-    .playerInfo {
-      display: block; } }
-  @media screen and (min-width: 768px) {
-    .playerInfo {
-      font-size: 1.5rem; } }
+  margin-left: 30px;
+  flex: 1; }
+  .player--slider .player--slider_bar {
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    outline: none; }
+  .player--slider .player--slider_fill {
+    height: 100%;
+    background-color: #7ec57c; }
+
+.player--time {
+  display: none;
+  margin: 0 30px; }
+  .player--time .player--time_wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: .7rem;
+    color: #777; }
+  .player--time .player--time_separator {
+    margin: 0 10px; }
+
+@media screen and (min-width: 530px) {
+  .player--song {
+    background-color: #fff; }
+    .player--song .player--main .player--music {
+      color: #222; }
+    .player--song .player--main .player--artist {
+      color: #3381b7; }
+  .player--time {
+    display: block; } }
+
+@media screen and (min-width: 800px) {
+  .player--slider {
+    display: block;
+    min-width: 80px; } }
+
+@media screen and (min-width: 1200px) {
+  .player--buttons {
+    margin-left: 30px; } }
