--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,18 +12,13 @@ html, body {
 
 #root {
   display: grid;
-  grid-template-rows: 80vh auto;
+  grid-template-rows: 90vh auto;
 }
 
 @import "keyframes.scss";
 
-// MEDIA QUERIES
-$bp-phone: "screen and (min-width: 400px)";
-$bp-tablet: "screen and (min-width: 768px)";
-$bp-desktop: "screen and (min-width: 1024px)";
-
 // COLOR
-$bg-home: #283e56;
+$bg-home: #21D4FD;
 $bg-project: #FDFDFD;
 
 .homeWrapper {
@@ -31,10 +26,10 @@ $bg-project: #FDFDFD;
   grid-template-columns: minmax(10px, 1fr) minmax(300px, 800px) minmax(10px, 1fr);
   grid-template-areas: ".   card    .";
   background-color: $bg-home;
-  background-image: url("../assets/bg_01.svg");
-  background-size: 200px;
+  background-image: url("../assets/bg_01.svg"), linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+  background-size: 200px, cover;
   box-shadow: 0px 5px 30px rgba(black, 0.4);
-  z-index: 50;
+  z-index: 50;  
 }
 
 .cardWrapper {
@@ -237,71 +232,161 @@ $bg-project: #FDFDFD;
   }
 }
 
-.playerWrapper {
-  display: none;
-  width: 90vw;
-  height: 10vh;
+.player--wrapper {
+  width: 100vw;
+  height: 3rem;
 	position: fixed;
-	bottom: 0px;
-	left: 50%;
+	bottom: 0;
+	left: 0;
 	color: #fff;
-	text-align: center;
-  transform: translateX(-50%);
+  text-align: center;
+  background-color: #FDFDFD;
+  display: grid;
+  grid-template-columns: minmax(0px, 1fr) minmax(200px, 1000px) minmax(0px, 1fr);
   
   @media (display-mode: standalone) {
     display: none;
   }
 }
 
-.playerButtons {
-  display: block;
-	> button {
-		border: none;
-		background: none;
-		outline: none;
-		margin: 5px 5px 0px 5px;
-		padding: 0;
-		cursor: pointer;
+.player--inner_wrapper {
+  height: 48px;
+  grid-column: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;    
+}
 
-		> img {
-			width: 20px;
-			height:20px;
-		}
-  }
+.player--song {
+  width: 400px;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  background-color: #2b2b2b;
   
-  @media #{$bp-tablet} {
-    > button > img {
-      width: 25px;
-      height: 25px;
+  .player--artwork {
+    width: 48px;
+    height: 48px;
+  }
+
+  > .player--main {
+    flex: 1;
+    margin-left: 8px;
+    overflow: hidden;
+
+    .player--music {
+      color: #fff;
+    }
+
+    .player--artist {
+      color: #fff;
+    }
+
+    .player--music, .player--artist {
+      display: block;
+      text-decoration: none;
+      text-align: left;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      font-size: .8rem;
     }
   }
 }
 
-.playerInfo {
-  display: none;
-	font-size: 0.8rem;  
-	> a {
-		text-decoration: none;
-		text-transform: capitalize;
-		color: #000;
-		
-		&:first-child {
-			font-weight: 700;
-		}
+.player--buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+	> button {
+    width: 48px;
+    height: 48px;
+		border: none;
+		background: none;
+		outline: none;
+		padding: 15px;
+    cursor: pointer;
+    
+    &:hover {
+      background-color: #888;
+    }
 
 		> img {
-			display: inline-block;
-			vertical-align: middle;
-			margin-bottom: 4px;
-			width: 25px;
-			height: 25px;
+			width: 100%;
+			height: 100%;
 		}
   }
-  @media #{$bp-phone} {
+}
+
+.player--slider {
+  display: none;
+  margin-left: 30px;
+  flex: 1;
+  
+  .player--slider_bar {
+    width: 100%;
+    height: 2px;
+    background-color: #ddd;
+    outline: none;
+  }
+  
+  .player--slider_fill {
+    height: 100%;
+    background-color: #7ec57c;
+  }
+}
+
+.player--time {
+  display: none;
+  margin: 0 30px;
+
+  .player--time_wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: .7rem;
+    color: #777;
+  }
+  .player--time_separator {
+    margin: 0 10px;
+  }
+}
+
+@media screen and (min-width: 530px) {
+  .player--song {
+    background-color: #fff;
+    
+    .player--main {
+      
+      .player--music {
+        color: #222;
+      }
+
+      .player--artist {
+        color: #3381b7;
+      }
+
+    }
+  }
+  
+  .player--time {
     display: block;
   }
+}
 
-	@media #{$bp-tablet} {
-    font-size: 1.5rem;
+@media screen and (min-width: 800px){
+  .player--slider {
+    display: block;
+    min-width: 80px;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .player--buttons {
+    margin-left: 30px;
   }
 }
