--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -115,7 +115,7 @@ $bg-project: #FDFDFD;
 .projectWrapper {
   display: grid;
   grid-template-columns: minmax(10px, 1fr) minmax(200px, 1000px) minmax(10px, 1fr);
-  grid-template-rows: 140px auto 120px;
+  grid-template-rows: 140px auto 120px auto 70px;
   grid-template-areas:
     ".  p1      ."
     ".  project ."
