--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,373 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');
+
 *, *:before, *:after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
 	margin: 0;
 	padding: 0;
-	font-family: "Space Mono", monospace, sans-serif;
+	font-family: "Roboto Mono", monospace, sans-serif;
 	font-variant-ligatures: no-common-ligatures;
 	font-size: 16px;
 }
 
-#root {
-  display: grid;
-  grid-template-rows: 90vh auto;
-}
-
 @import "keyframes.scss";
-
-// COLOR
-$bg-home: #21D4FD;
-$bg-project: #FDFDFD;
-
-.homeWrapper {
-  display: grid;
-  grid-template-columns: minmax(10px, 1fr) minmax(300px, 800px) minmax(10px, 1fr);
-  grid-template-areas: ".   card    .";
-  background-color: $bg-home;
-  background-image: url("../assets/bg_01.svg"), linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  background-size: 200px, cover;
-  box-shadow: 0px 5px 30px rgba(black, 0.4);
-  z-index: 50;  
-}
-
-.cardWrapper {
-  grid-area: card;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-	perspective: 1000px;
-}
-
-.profilePicture {
-  z-index:100;
-  transition: all 0.1s ease-in-out;
-  filter: drop-shadow(0px 0px 2px rgba(0,0,0,0.15));
-  animation: rotate 1.4s 0.2s;
-  border: 5px solid #fff;
-  border-radius: 50%;
-
-  &:hover {
-    transform: translateY(-10px);
-    filter: drop-shadow(5px 10px 2px rgba(0,0,0,0.15));
-  }
-
-  --size: calc(6rem + 4vw);
-  width: var(--size);
-  height: var(--size);
-  margin-bottom: calc(-1* var(--size) / 2);
-}
-
-.card {
-	transform-origin: top;
-  transform: rotateX(-80deg);
-  opacity: 0;
-  animation: flipInX 0.4s 1s;
-  animation-fill-mode: forwards;
- 
-  font-size: calc(80% + 0.8vw);
-  padding: 3.5em 1.2em 1.5em 1.2em;
-  border-radius: 4px;
-
-  background: #ffffff;
-  box-shadow: 8px 8px rgba(0,0,0,0.25);
-
-  > p {
-    margin: 0;
-    line-height: 1.4em;
-    margin-bottom: 1em;
-    > span {
-      font-weight: 700;
-    }
-  }
-}
-
-.socialWrapper {
-	display: flex;
-	justify-content: center;
-  align-items: center;
-  
-	> span {
-		display: block;
-		height: 1px;
-		border-bottom: 2px dashed #282B2E;
-		flex: 1;
-  }
-}
-
-.socialIcons {
-	height: auto;
-  width: calc(1.5rem + 2%);
-  margin: 0 10px;
-	
-  &:hover {
-    animation: shake 200ms infinite;
-  }
-
-  > img {
-    height: 100%;
-    width: 100%;
-  }
-}
-
-.projectWrapper {
-  display: grid;
-  grid-template-columns: minmax(10px, 1fr) minmax(200px, 1000px) minmax(10px, 1fr);
-  grid-template-rows: 140px auto 120px auto 70px;
-  grid-template-areas:
-    ".  p1      ."
-    ".  project ."
-    ".  p2      ."
-    ".  other   .";
-  background-color: $bg-project;
-  background-image: url("../assets/bg_03.svg");
-  background-size: 50px;
-
-  > .p1 {
-    grid-area: p1;
-  }
-
-  > .p2 {
-    grid-area: p2;
-  }
-  
-  .p1, .p2 {
-    font-size: 1.6rem;
-    display: inline-flex;
-    align-items: center;
-  }
-  
-}
-
-.cardProject {
-  grid-area: project;
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: auto;
-}
-
-.project {
-  
-  > p {
-    margin: 0;
-  }
-  
-  > a {
-    text-decoration: none;
-    color: black;
-
-    > img {
-      width: 100%;
-      object-fit: cover;
-      transition: transform 300ms ease;
-    }
-    
-    > span {
-      display: inline-block;
-      position: relative;
-      margin: 10px 0 5px 0;
-      font-size: 1.1rem;
-      font-weight: 700;
-
-      &:after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: block;
-        height: 2px;  
-        width: 0;
-        background-color: rgba(black, 0.4);
-        transition: width 300ms ease;
-      }
-    }
-    
-    &:hover {
-      > img {
-        transform: scale(1.01)
-      }
-      > span:after {
-        content: "";
-        display: block;
-        width: 100%;
-      }
-    }
-
-  }
-}
-
-.otherProjects {
-  grid-area: other;
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: auto;
-}
-
-.other {
-  padding: 10px;
-  color: black;
-  text-decoration: none;
-  border-radius: 4px;
-  background-color: #fcfcfc;
-  box-shadow: 0px 0px 1px rgba(black, 0.5);
-  transition: all 200ms ease;
-  
-  &:hover {
-    box-shadow: 0px 10px 20px rgba(black, 0.5);
-    transform: scale(1.01)
-  }
-
-  > span {
-    font-size: 1.1rem;
-  }
-      
-  &:visited {
-    > span {
-      color: red;
-    }
-  }
-}
-
-.player--wrapper {
-  width: 100vw;
-  height: 3rem;
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	color: #fff;
-  text-align: center;
-  background-color: #FDFDFD;
-  display: grid;
-  grid-template-columns: minmax(0px, 1fr) minmax(200px, 1000px) minmax(0px, 1fr);
-  
-  @media (display-mode: standalone) {
-    display: none;
-  }
-}
-
-.player--inner_wrapper {
-  height: 48px;
-  grid-column: 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;    
-}
-
-.player--song {
-  width: 422px;
-  height: 100%;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: #2b2b2b;
-  
-  .player--artwork {
-    width: 48px;
-    height: 48px;
-  }
-
-  > .player--main {
-    flex: 1;
-    margin-left: 8px;
-    overflow: hidden;
-
-    .player--music {
-      color: #fff;
-    }
-
-    .player--artist {
-      color: #fff;
-    }
-
-    .player--music, .player--artist {
-      display: block;
-      text-decoration: none;
-      text-align: left;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      overflow: hidden;
-      font-size: .8rem;
-    }
-  }
-}
-
-.player--buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-	> button {
-    width: 48px;
-    height: 48px;
-		border: none;
-		background: none;
-		outline: none;
-		padding: 15px;
-    cursor: pointer;
-    
-    &:hover {
-      background-color: #888;
-    }
-
-		> img {
-			width: 100%;
-			height: 100%;
-		}
-  }
-}
-
-.player--slider {
-  margin-left: 30px;
-  flex: 1;
-  
-  .player--slider_bar {
-    width: 100%;
-    height: 2px;
-    background-color: #ddd;
-    outline: none;
-  }
-  
-  .player--slider_fill {
-    height: 100%;
-    background-color: #7ec57c;
-  }
-}
-
-.player--time {
-  margin: 0 30px;
-
-  .player--time_wrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    font-size: .7rem;
-    color: #777;
-  }
-  .player--time_separator {
-    margin: 0 10px;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .player--song {
-    background-color: #FDFDFD;
-    
-    .player--main {
-      
-      .player--music {
-        color: #222;
-      }
-
-      .player--artist {
-        color: #3381b7;
-      }
-
-    }
-  }
-}
+@import "intro.scss";
+@import "project.scss";
+@import "player.scss";
