--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,16 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700");
 *, *:before, *:after {
   box-sizing: border-box; }
 
 html, body {
   margin: 0;
   padding: 0;
-  font-family: "Space Mono", monospace, sans-serif;
+  font-family: "Roboto Mono", monospace, sans-serif;
   font-variant-ligatures: no-common-ligatures;
   font-size: 16px; }
-
-#root {
-  display: grid;
-  grid-template-rows: 90vh auto; }
 
 @keyframes rotate {
   0% {
@@ -47,93 +44,95 @@ html, body {
     opacity: 1;
     transform: rotateX(0deg); } }
 
-.homeWrapper {
+.intro--wrapper {
   display: grid;
-  grid-template-columns: minmax(10px, 1fr) minmax(300px, 800px) minmax(10px, 1fr);
-  grid-template-areas: ".   card    .";
-  background-color: #21D4FD;
-  background-image: url("../assets/bg_01.svg"), linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-  background-size: 200px, cover;
-  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.4);
-  z-index: 50; }
+  grid-template-columns: minmax(10px, 1fr) minmax(300px, 1000px) minmax(10px, 1fr);
+  position: relative;
+  overflow: hidden;
+  height: 90vh;
+  background: linear-gradient(to bottom, transparent 70%, #323232), url("../assets/graph-paper.svg");
+  background-size: cover, 200px; }
+  .intro--wrapper > video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -1; }
 
-.cardWrapper {
-  grid-area: card;
+.intro--container {
+  grid-column: 2;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  perspective: 1000px; }
+  z-index: 2; }
 
-.profilePicture {
-  z-index: 100;
-  transition: all 0.1s ease-in-out;
-  filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.15));
-  animation: rotate 1.4s 0.2s;
-  border: 5px solid #fff;
-  border-radius: 50%;
-  --size: calc(6rem + 4vw);
-  width: var(--size);
-  height: var(--size);
-  margin-bottom: calc(-1* var(--size) / 2); }
-  .profilePicture:hover {
-    transform: translateY(-10px);
-    filter: drop-shadow(5px 10px 2px rgba(0, 0, 0, 0.15)); }
-
-.card {
-  transform-origin: top;
-  transform: rotateX(-80deg);
-  opacity: 0;
-  animation: flipInX 0.4s 1s;
-  animation-fill-mode: forwards;
-  font-size: calc(80% + 0.8vw);
-  padding: 3.5em 1.2em 1.5em 1.2em;
-  border-radius: 4px;
-  background: #ffffff;
-  box-shadow: 8px 8px rgba(0, 0, 0, 0.25); }
-  .card > p {
-    margin: 0;
-    line-height: 1.4em;
-    margin-bottom: 1em; }
-    .card > p > span {
-      font-weight: 700; }
-
-.socialWrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .socialWrapper > span {
+.intro--name {
+  position: relative;
+  align-self: flex-start;
+  font-size: calc(2rem + 2vw);
+  color: white;
+  margin: 0 0 1.2em 0;
+  padding: 0 0 15px 0; }
+  .intro--name::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 8px;
+    width: calc(100px + 1vw);
     display: block;
-    height: 1px;
-    border-bottom: 2px dashed #282B2E;
-    flex: 1; }
-
-.socialIcons {
-  height: auto;
-  width: calc(1.5rem + 2%);
-  margin: 0 10px; }
-  .socialIcons:hover {
-    animation: shake 200ms infinite; }
-  .socialIcons > img {
-    height: 100%;
+    background-color: white;
+    transition: all 300ms ease; }
+  .intro--name:hover:after {
+    content: "";
+    display: block;
     width: 100%; }
 
-.projectWrapper {
+.intro--desc {
+  font-size: calc(1rem + 1vw);
+  color: white;
+  margin: 0;
+  line-height: 1.4em;
+  margin-bottom: 1.5em; }
+
+.social {
+  display: inline-flex;
+  justify-content: flex-start; }
+  .social > a {
+    text-decoration: none;
+    font-size: calc(1rem + .5vw);
+    font-weight: 700;
+    color: #097cf3;
+    margin-right: 20px; }
+
+.project--wrapper {
   display: grid;
-  grid-template-columns: minmax(10px, 1fr) minmax(200px, 1000px) minmax(10px, 1fr);
-  grid-template-rows: 140px auto 120px auto 70px;
-  grid-template-areas: ".  p1      ." ".  project ." ".  p2      ." ".  other   .";
-  background-color: #FDFDFD;
-  background-image: url("../assets/bg_03.svg");
-  background-size: 50px; }
-  .projectWrapper > .p1 {
-    grid-area: p1; }
-  .projectWrapper > .p2 {
-    grid-area: p2; }
-  .projectWrapper .p1, .projectWrapper .p2 {
-    font-size: 1.6rem;
-    display: inline-flex;
-    align-items: center; }
+  grid-template-columns: minmax(0, 1fr) minmax(200px, 1000px) minmax(0, 1fr);
+  background-color: #323232; }
+  .project--wrapper > div {
+    grid-column: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: -50px;
+    margin-bottom: 60px;
+    padding: 20px 10px;
+    border: 1px solid whitesmoke;
+    border-radius: 8px;
+    background-color: white;
+    background: url("../assets/bg_01.svg"), linear-gradient(to bottom, white 70%, whitesmoke);
+    background-size: 200px, cover;
+    z-index: 100; }
+
+.p1, .p2 {
+  font-size: 1.6rem;
+  display: inline-flex;
+  align-items: center; }
 
 .cardProject {
   grid-area: project;
@@ -187,11 +186,11 @@ html, body {
   color: black;
   text-decoration: none;
   border-radius: 4px;
-  background-color: #fcfcfc;
-  box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+  background-color: white;
+  box-shadow: 0px 0px 1px whitesmoke;
   transition: all 200ms ease; }
   .other:hover {
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     transform: scale(1.01); }
   .other > span {
     font-size: 1.1rem; }
@@ -204,11 +203,10 @@ html, body {
   position: fixed;
   bottom: 0;
   left: 0;
-  color: #fff;
-  text-align: center;
   background-color: #FDFDFD;
   display: grid;
-  grid-template-columns: minmax(0px, 1fr) minmax(200px, 1000px) minmax(0px, 1fr); }
+  grid-template-columns: minmax(0px, 1fr) minmax(200px, 1000px) minmax(0px, 1fr);
+  z-index: 999; }
   @media (display-mode: standalone) {
     .player--wrapper {
       display: none; } }
