--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,15 +1,16 @@
 .project--wrapper {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(200px, 1000px) minmax(0, 1fr);
-  background-color: #323232; }
+  grid-template-columns: minmax(0, 1fr) minmax(200px, 1200px) minmax(0, 1fr);
+  background-color: #111111; }
   .project--wrapper > div {
     grid-column: 2;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: relative;
     margin-top: -50px;
     margin-bottom: 60px;
-    padding: 20px 10px;
+    padding: 20px 15px;
     border: 1px solid whitesmoke;
     border-radius: 8px;
     background-color: white;
@@ -17,20 +18,16 @@
     background-size: 200px, cover;
     z-index: 100; }
 
-.p1, .p2 {
-  font-size: 1.6rem;
-  display: inline-flex;
-  align-items: center; }
+.header {
+  font-size: calc(1.5rem + .3vw); }
 
 .cardProject {
   grid-area: project;
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: auto; }
-
-.project > p {
-  margin: 0; }
+  grid-template-rows: auto;
+  margin-bottom: 20px; }
 
 .project > a {
   text-decoration: none;
@@ -38,7 +35,11 @@
   .project > a > img {
     width: 100%;
     object-fit: cover;
-    transition: transform 300ms ease; }
+    border-radius: 4px;
+    border: 1px solid whitesmoke;
+    overflow: hidden;
+    filter: grayscale(100%);
+    transition: all 200ms ease; }
   .project > a > span {
     display: inline-block;
     position: relative;
@@ -55,8 +56,10 @@
       width: 0;
       background-color: rgba(0, 0, 0, 0.4);
       transition: width 300ms ease; }
+  .project > a > p {
+    margin: 0; }
   .project > a:hover > img {
-    transform: scale(1.01); }
+    filter: grayscale(0); }
   .project > a:hover > span:after {
     content: "";
     display: block;
@@ -81,6 +84,13 @@
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     transform: scale(1.01); }
   .other > span {
-    font-size: 1.1rem; }
+    font-size: 1.1rem;
+    font-weight: 700; }
   .other:visited > span {
     color: red; }
+
+.author {
+  font-size: .7rem;
+  position: absolute;
+  bottom: 2px;
+  right: 2px; }
